<resources>
    <string name="app_name">RoomDataBase</string>
    <string name="delete_data">Delete Data</string>
    <string name="read_data">Read Data</string>
    <string name="id_number_to_fetch_out_data">ID Number to fetch out data</string>
    <string name="insert_data">Insert Data</string>
    <string name="last_name">Last Name</string>
    <string name="id_number">ID Number</string>
    <string name="user_information">USER INFORMATION!</string>
    <string name="first_name">First Name</string>
    <string name="update_data">Update Data</string>
</resources>